--- a/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html
+++ b/pages/learn/storia_elettroacustica/musica_digitale_seconda_parte.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Musica Digitale - Prima Parte</title>
+  <title>Musica Digitale - Seconda Parte</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Musica Digitale - Prima Parte</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Musica Digitale - Seconda Parte</strong></h4>
             </div>
         </div>
     </div>
@@ -91,185 +91,54 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Il computer veniva definito cervello elettronico. Computer Music ha diversi significati:
+                    Il computer è sempre meno una macchina che pensa ed è sempre di più una macchina che simula la realtà, con i modelli fisici e matematici ad esempio (simulazione di corde e tubi ad esempio o del tratto vocale).
                     <br><br>
+                    Oggi la sintesi non si basa più su un mero calcolo, ma sulla simulazione della realtà, il computer ad oggi simula processi e la capacità del modello è espressa dalle metafore che riesce a realizzare.
+                    <br><br>
+                    La differenza tra Illiac Suite di Hiller e la sintesi del suono è che il computer ora è capace di fare cose più complesse, non esiste infatti più il motivo che porti ad utilizzare suoni che arrivino dalla realtà, distinzione tra un’idea di simulazione del pensiero ed un’idea di simulazione del suono che converge verso pratiche.
+                    <br><br>
+                    Alcuni modelli fisici interessanti sono quelli realizzati da Barrière tra il 1977 e il 1982 denominato Chante e Forme, Modello fisico della voce e sistema di controllo di esso, da cui deriva la composizione Chreode I, primo brano realizzato con la sintesi per modelli fisici sulla voce, assomiglia ad un quadro puntillista di Seurat, ascolto estesico e valutazione della portata storica del brano.
+                    <br><br>
+                    La volontà di avvicinarsi ad un suono reale togliendogli la naturalezza a ciò che fa è anche la spinta di Wishart che scrive 6 brani intitolati VOX di cui solo Vox 5 è di musica elettronica in cui utilizza l’analisi e la re-sintesi applicata alla vocalità, attraverso un phase vocoder.
+                    <br><br>
+                    Il vocoder è algoritmo che:
                     <ul>
-                      <li>eseguire un software multicanale</li>
-                      <li>elaborazione dal vivo</li>
-                      <li>assemblaggio di suono al computer</li>
-                      <li>controllo di clip audio al computer</li>
+                      <li>analizza il segnale e trova dei movimenti ed inviluppi di ampiezza di ogni parziale con la DFT
+                      </li>
+                      <li>associa un inviluppo ad un oscillatore
+                      </li>
+                      <li>si ottiene il risultato iniziale ma con qualcosa che decide il compositore, modificando inviluppi, offset di frequenza, e con modifiche che non mi riproducono più il segnale iniziale ma aberrazioni creative)
+                      </li>
+                    <br><br>
+                    </p>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Wishart è dunque un compositore molto tecnologico che sente il bisogno di svincolarsi dal dominio della tecnologia come ragion d’essere della tecnologia, non come Chowning che definisce la tecnologia come uno strumento per svincolarsi dalla presenza tecnologica e portarla a scopi espressivi.
+                    <br><br>
+                    Wishart è considerabile un vero competente dell’elettronica (Libro On sonic Art di wishart), cerca di dominare la tecnica alla perfezione per svincolarsi da essa.
+                    <br><br>
+                    Altro brano sui modelli fisici importante è Corda di metallo di Lupone in cui si entra nell’ambito del tempo reale.
+                    <br><br>
+                    (1980 software per avere suoni in tempo reale attraverso la 4x di DI GIugno all’IRCAM, fino al 1977 per avere un minuto di suoni bisognava aspettare le notti poi arrivò il samson box i cui figli furono il Moog, il Synclavier ed il Fairlight ed il Syter). strumenti elettronici
+                    <br><br>
+                    Attraverso il sistema in tempo reale 4A Wessel realizzò Antony, il sistema aveva 512 oscillatori e fu uno dei primi pezzi realizzati in tempo reale (attraverso DSP, ovvero il calcolo audio pesa su un processore dedicato all’audio invece che sulla macchina stessa). Peppino Di Giugno, non capiva nulla di musica ma gli interessava la macchina, Di Giugno lavorò all’IRIS, nelle Marche a Fatar, Bontempi al distretto delle fabbriche musicali italiane.
+                    <br><br>
+                    Wessel risponde con Antony all'utilizzo che si poteva fare con 512 oscillatori.
+                    <br><br>
+                    Archetipo che funziona per Wessel è il mettere e togliere frequenze basse, segreto fatto di strutture, di oscillatori sovrapposti che emulano la sovrapposizione di timbri, frutto di una strutturazione del materiale, con esiti predefiniti.
+                    <br><br>
+                    Wessel realizza di fatto l’utopia di Colonia, realizzare grandi strutture partendo dall'elemento atomico, ovvero l’oscillatore.
+                    <br><br>
+                    A Colonia volevano utilizzare le consonanze, Ligeti realizzò che secondo lui non erano realizzabili con l’elettronica ma con gli strumenti, attraverso Kammer Konzert, Atmospheres, Ramiphications e quartetto, dunque Ligeti aveva una doppia discendenza, da Antony discende da Ligeti e poi Ligeti stesso si basa su Antony.
+                    <br><br>
+                    A partire da Ligeti vi è una differenza con gli spettralisti che lasciano emergere armonie e melodie consonanti alle volte con carattere complesso.
+                    <br><br>
+                    Altro compositore è Chris Chafe con il brano In A Word per strumento ed elettronica con elementi elaborati del violoncello.
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-
-  <!-- Text-->
-    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12 col-lg-8">
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Ma cosa significa Computer music negli anni ’50?
-                      <br><br>
-                      L’idea del cervello elettronico, è cambiata nel tempo, poiché il computer si pensava simulasse il pensiero umano, il computer è però una cosa che emula la realtà e con il tempo è divenuto simulatore della realtà. Il computer era visto come cervello elettronico fino agli anni ’90, metafora che tradiva una mentalità, dunque secondo questa mentalità, il computer non avrebbe potuto realizzare la sintesi, poiché la capacità di calcolo era limitata, dunque simulava il pensiero, dunque bisognava insegnare al computer a scrivere musica e non a sintetizzare il suono. Il primo esempio di Computer Music in quest’ottica è dunque realizzato da Hitler all'università dell’Illinois, insegnò ad un computer Illiac a scrivere quartetti in stile viennese nel 1956.
-                    </p>
-                  </div>
-              </div>
-          </div>
-      </section>
-
-  <!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-    <div class="container">
-        <div class="title-wrapper mb-5">
-        </div>
-        <div class="row align-items-center">
-            <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/n0njBFLQSk8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-            <div class="col-12 col-lg">
-                <div class="text-wrapper">
-                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>Lejaren Hiller - Illiac Suite (1956)</strong>
-                    </h5>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Proprio su questa linea di pensiero della simulazione della realtà si inserisce la "Illiac Suite" di Lejaren_Hiller del 1956. La Illiac Suite è infatti il primo pezzo realizzato da computer, e Hiller fece in modo che il computer scrivesse un quartetto d’archi in stile, secondo delle regole. Il primo utilizzo del computer fu infatti quello di concorrenza del pensiero umano, che viene descritta oggi come composizione assistita dal calcolatore. Anche se il pensiero alla base è cambiato negli anni infatti un computer ben istruito può elaborare la realtà, ovvero la sintesi del suono. I programmi usati da Hiller, Project 1 e Project 2, erano programmi per la generazione di partiture strumentali.
-                      </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<br>
-<br>
-
-<!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    Anche la ASKO Suite di Koenig viene realizzata con regole seriali da un calcolatore e sembra appartenere alla seconda scuola viennese. Paradigma della computer music è anche questo utilizzo del computer per il ragionamento più che per la sintesi. Come il passaggio dalla musica medievale con la tradizione orale, che arriva all’Ars Nova con le prime polifonie scritte (proprio per via della scrittura e del tramandarsi non più orale dei testi si arriva alla polifonia), il compositore può prescindere dal contesto della realizzazione musicale (correlazione tra invenzione autonoma e scrittura, il computer lo diventa in seguito). Altro paradigma della musica elettronica diverrà la sintesi FM.
-                    <br><br>
-                    Hiller fu una figura poliedrica, e la sua composizione assistita dal computer ha lasciato tracce nella nostra tradizione, con software come Open Music o Opus Modus. Questi software di composizione assistita risentono però della zavorra compositiva notazionale, che è di fatto intrinseca all'idea di generazione automatica di partiture, la composizione assistita è quindi all'inizio improntata allo stesso modo della sintesi, ma è proprio qui che attraverso il software Music, che troviamo la divisione tra orchestra e partitura, e troviamo dunque una prima idea di programmazione assistita al computer della sintesi (partitura basata sul concetto di nota). Dunque esemplificando, la musica diviene la somma di unità significanti, che è obbligata e suggerita da un’architettura(Score fu anche il nome del programma che gestiva la partitura).
-                    <br><br>
-                    Avviene di fatto un’intrusione della musica assistita all'elaboratore, nella sintesi. Il pezzo diviene dunque l’algoritmo che gestisce la storia dello strumento (Forma del Respiro di Lupone).
-                    <br><br>
-                    L’idea della composizione assistita passa da Project 1 a 2 e poi arriva a Open Music il computer può essere in questa fase:
-                    <br><br>
-                    1. compositore
-                    <br><br>
-                    2. simulatore della realtà
-                    <br><br>
-                    Il software Music si pone nella seconda e la prima versione utilizzabile su varie macchine divenne Music V, antenato di CSound, poiché scritto in Fortran.
-                    <br><br>
-                    Pensare alla Computer Music ci deve far pensare a Max Mathews, il quale realizza insieme a Newman Guttman uno dei brani più importanti della storia della musica elettronica, "The Silver Scale". Mathews nel 1960 realizzerà "Numerolgy". Gli esiti di Numerolgy furono i finanziamenti dai privati, e questi primi brani servivano solo per testimoniare le possibilità a livello scientifico ed economico, Altro brano che serviva a far sentire le possibilità del computer fu "Variazioni di timbro e attacco" di Pierce del 1961 (nel 1977 al CCRMA si faceva già sintesi in tempo reale con il Samson Box). strumenti elettronici
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Video-->
-  <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-      <div class="container">
-          <div class="title-wrapper mb-5">
-          </div>
-          <div class="row align-items-center">
-              <div class="col-12 col-lg-4 video-block">
-                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/PM64-lqYyZ8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-              </div>
-              <div class="col-12 col-lg">
-                  <div class="text-wrapper">
-                      <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                          <strong>Newman Guttman - The silver scale (1957)</strong>
-                      </h5>
-                      <p class="mbr-text mbr-fonts-style display-7">
-                        Sintesi pcm (usato da sempre, funziona bene quindi mai sostituito)
-                        </p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-
-
-  <!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-    <div class="container">
-        <div class="title-wrapper mb-5">
-        </div>
-        <div class="row align-items-center">
-            <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/hVmbthBYFaw" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-            </div>
-            <div class="col-12 col-lg">
-                <div class="text-wrapper">
-                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>Max Mathews - Numerology (1960)</strong>
-                    </h5>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Fatta con un computer grande quanto l'aula 1. Queste cose potevano dimostrare che c'era sviluppo, erano tollerati, non completamente accettati, nei laboratori Bells.
-                      </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-  <div class="container">
-      <div class="title-wrapper mb-5">
-      </div>
-      <div class="row align-items-center">
-          <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/4YNg8VGqOl8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-          </div>
-          <div class="col-12 col-lg">
-              <div class="text-wrapper">
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>John Pierce - Variations in timbre and attack (1961)</strong>
-                  </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    Dunque quello di Mathews divenne un appello ai compositore (serious composer) per far sfruttare i sistemi da loro inventati nella composizione ad un più alto livello. Tra i primi ospiti ai Bell_Laboratories vi fu James Tenney nel 1963 e allo stesso modo sorge la domanda: cosa faccio per ottenere dei suoni che interessino, e per gestirne le infinite possibilità?
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-
-
-<!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-  <div class="container">
-      <div class="title-wrapper mb-5">
-      </div>
-      <div class="row align-items-center">
-          <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/8zlY9-EcGf8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-          </div>
-          <div class="col-12 col-lg">
-              <div class="text-wrapper">
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>James Tenney - Dialogue (1963)</strong>
-                  </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    Attraverso la realizzazione di Dialogue si inizia ad intravedere una direzione, la differenza tra gli esempi realizzati prima di questo brano, è che gli altri non sono appunto brani, ma esempi, Tenney applica serialità e rumore bianco, realizzando di fatto i primi paradigmi della Computer Music.
-                    </p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-
-<br><br>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
