--- a/pages/learn.html
+++ b/pages/learn.html
@@ -99,7 +99,6 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Storia della Musica Elettroacustica</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">dal 1948 alla Computer Music<br><br></p>
@@ -119,7 +118,6 @@
                     <div class="row">
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
-
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Il Paradigma di Stockhausen</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon</p>
@@ -138,6 +136,31 @@
     </div>
 </section>
 
+<section data-bs-version="5.1" class="features4 cid-sYzcirxQYM" id="features5-1h">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <div class="card-wrapper">
+                    <div class="row">
+                        <div class="col-12 col-md-7">
+                            <div class="text-wrapper">
+                                <h5 class="card-title mbr-fonts-style display-5">
+                                    <strong>Laboratorio di Tecnologie Musicali</strong></h5>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4">dal 1948 alla Computer Music<br><br></p>
+                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary display-4">Learn more</a></div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <div class="img-wrapper">
+                                <img src="https://www.gabrielavelitch.com/assets/images/spectrogram.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
