--- a/pages/learn.html
+++ b/pages/learn.html
@@ -132,8 +132,28 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 col-lg-6">
+                <div class="card-wrapper">
+                    <div class="row">
+                        <div class="col-12 col-md-7">
+                            <div class="text-wrapper">
+                                <h5 class="card-title mbr-fonts-style display-5">
+                                    <strong>Il Paradigma di Stockhausen</strong></h5>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon</p>
+                                <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <div class="img-wrapper">
+                                <img src="https://www.gabrielavelitch.com/assets/images/stockhausen.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
 </section>
 
 <section data-bs-version="5.1" class="features4 cid-sYzcirxQYM" id="features5-1h">
