--- a/pages/learn.html
+++ b/pages/learn.html
@@ -120,7 +120,7 @@
                             <div class="text-wrapper">
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Laboratorio di Tecnologie Musicali</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon</p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4"></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
@@ -145,14 +145,14 @@
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
                                 <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Storia della Musica Elettroacustica</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4">dal 1948 alla Computer Music<br><br></p>
-                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary display-4">Learn more</a></div>
+                                    <strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon<br><br></p>
+                                <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="https://www.gabrielavelitch.com/assets/images/learn/spectrogram.png">
+                                <img src="https://www.gabrielavelitch.com/assets/images/learn/analisi_stock.png">
                             </div>
                         </div>
                     </div>
@@ -164,9 +164,9 @@
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
                                 <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Laboratorio di Tecnologie Musicali</strong></h5>
+                                    <strong>Il Paradigma di Stockhausen</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">coming soon</p>
-                                <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary display-4">Learn more</a></div>
+                                <div class="mbr-section-btn"><a href="" class="btn btn-primary display-4">Coming soon!</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
