--- a/pages/learn.html
+++ b/pages/learn.html
@@ -120,7 +120,7 @@
                             <div class="text-wrapper">
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Laboratorio di Tecnologie Musicali</strong></h5>
-                                <p class="mbr-text mbr-fonts-style mb-5 display-4"></p>
+                                <p class="mbr-text mbr-fonts-style mb-5 display-4"><br><br></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
