--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -100,8 +100,7 @@
                   <div class="card-wrapper pb-4">
                       <div class="card-box align-center">
                           <h4 class="card-title mbr-fonts-style mb-4 display-2">
-                            <br>
-                              <strong>Steps</strong>
+                              <strong>Week 1</strong>
                           </h4>
                           <p class="mbr-text mbr-fonts-style mb-4 display-7">
                               Obiettivo del laboratorio è fornire allo studente competenze di base che riguardano le tecnologie elettroacustiche e multimediali applicate alla musica. In particolare, gli studenti saranno coinvolti nella realizzazione di progetti compositivi e performativi che prevedono un utilizzo pratico delle specifiche tecniche acquisite. Inoltre il laboratorio intende offrire la possibilità di acquisire conoscenze di base nell'ambito della teoria musicale.
@@ -116,7 +115,7 @@
                       </div>
                       <div class="text-box">
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>Specification</strong>
+                              <strong>Introduzione</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
                               are not familiar with
