--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -90,6 +90,81 @@
   </div>
 </section>
 
+<section data-bs-version="5.1" class="content17 cid-sYzj9koTFS" id="content17-1j">
+    <div class="container">
+
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-10">
+                    <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
+                        <div class="card mb-3">
+                            <div class="card-header" role="tab" id="headingOne">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Libraries</strong></h6>
+                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                </a>
+                            </div>
+                            <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div class="panel-body">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                      Obiettivo del laboratorio è fornire allo studente competenze di base che riguardano le tecnologie elettroacustiche e multimediali applicate alla musica. In particolare, gli studenti saranno coinvolti nella realizzazione di progetti compositivi e performativi che prevedono un utilizzo pratico delle specifiche tecniche acquisite. Inoltre il laboratorio intende offrire la possibilità di acquisire conoscenze di base nell'ambito della teoria musicale.
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="card mb-3">
+                            <div class="card-header" role="tab" id="headingTwo">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Filters</strong></h6>
+                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                </a>
+                            </div>
+                            <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div class="panel-body">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                      <strong>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_fir.html" class="text-primary"><b>comb FIR</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>comb IIR</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>comb IIR vs FIR</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a>
+                                      </strong>
+                                      </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="card mb-3">
+                            <div class="card-header" role="tab" id="headingTwo">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse3_2" aria-expanded="false" aria-controls="collapse3">
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Effects & Reverbs</strong></h6>
+                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                </a>
+                            </div>
+                            <div id="collapse3_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div class="panel-body">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                      <strong>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
+                                        <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/flanger.html" class="text-primary"><b>flanger</b></a>
+                                      </strong>
+                                      </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
 
   <!-- Index-->
 
@@ -102,9 +177,6 @@
                           <h4 class="card-title mbr-fonts-style mb-4 display-2">
                               <strong>Week 1</strong>
                           </h4>
-                          <p class="mbr-text mbr-fonts-style mb-4 display-7">
-                              Obiettivo del laboratorio è fornire allo studente competenze di base che riguardano le tecnologie elettroacustiche e multimediali applicate alla musica. In particolare, gli studenti saranno coinvolti nella realizzazione di progetti compositivi e performativi che prevedono un utilizzo pratico delle specifiche tecniche acquisite. Inoltre il laboratorio intende offrire la possibilità di acquisire conoscenze di base nell'ambito della teoria musicale.
-                            </p>
                       </div>
                   </div>
               </div>
