--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -115,7 +115,7 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>DOWNLOADS</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Downloads</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
@@ -136,7 +136,7 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse3_2" aria-expanded="false" aria-controls="collapse3">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Effects & Reverbs</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>INFORMAZIONI</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
@@ -195,7 +195,7 @@
                       </div>
                       <div class="text-box">
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>Project Planning</strong>
+                              <strong>dalla Musica Concreta alla Computer Music</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
                               are not familiar with
