--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -174,7 +174,7 @@
                       </div>
                       <div class="text-box">
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>dalla Musica Concreta alla Computer Music</strong>
+                              <strong>Dalla Musica Concreta alla Computer Music</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
                               are not familiar with
@@ -187,7 +187,20 @@
                       </div>
                       <div class="text-box">
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
-                              <strong>Deployment</strong>
+                              <strong>Elementi di Composizione e Grafizzazione</strong>
+                          </h4>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
+                              are not familiar with
+                              the intricacies of web development.</h5>
+                      </div>
+                  </div>
+                  <div class="item mbr-flex last">
+                      <div class="icon-box">
+                          <span class="step-number mbr-fonts-style display-5">4</span>
+                      </div>
+                      <div class="text-box">
+                          <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
+                              <strong>Sintesi Sonora</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
                               are not familiar with
