--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -176,9 +176,9 @@
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
                               <strong>Dalla Musica Concreta alla Computer Music</strong>
                           </h4>
-                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
-                              are not familiar with
-                              the intricacies of web development.</h5>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
+                            Panorama dell'evoluzione della musica elettroacustica.
+                          </h5>
                       </div>
                   </div>
                   <div class="item mbr-flex last">
