--- a/assets/internals/gkv_nav.html
+++ b/assets/internals/gkv_nav.html
@@ -1,10 +1,10 @@
-<section data-bs-version="5.1" class="menu menu2 cid-sZffxwg6qa" once="menu" id="menu2-23">  
+<section data-bs-version="5.1" class="menu menu2 cid-sZffxwg6qa" once="menu" id="menu2-23">
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://www.gabrielavelitch.com/index.html">
-                        <img src="assets/images/favicon-96x121.png" alt="" style="height: 3rem;">
+                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x121.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
