--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -181,7 +181,7 @@
                           </h5>
                       </div>
                   </div>
-                  <div class="item mbr-flex last">
+                  <div class="item mbr-flex">
                       <div class="icon-box">
                           <span class="step-number mbr-fonts-style display-5">3</span>
                       </div>
