--- a/pages/learn/laboratorio_di_tecnologie_musicali/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali/laboratorio_di_tecnologie_musicali.html
@@ -163,9 +163,9 @@
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
                               <strong>Introduzione</strong>
                           </h4>
-                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-
-                          </h5>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
+                              are not familiar with
+                              the intricacies of web development.</h5>
                       </div>
                   </div>
                   <div class="item mbr-flex">
@@ -177,7 +177,7 @@
                               <strong>Dalla Musica Concreta alla Computer Music</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            Campionamento, .
+                            Panorama dell'evoluzione della musica elettroacustica.
                           </h5>
                       </div>
                   </div>
@@ -189,12 +189,9 @@
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
                               <strong>Elementi di Composizione e Grafizzazione</strong>
                           </h4>
-                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            <ul>
-                              <li>Storyboard</li>
-                                <li>spettrogramma</li>
-                              </ul>
-                          </h5>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
+                              are not familiar with
+                              the intricacies of web development.</h5>
                       </div>
                   </div>
                   <div class="item mbr-flex last">
@@ -205,9 +202,9 @@
                           <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
                               <strong>Sintesi Sonora</strong>
                           </h4>
-                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            Oscillatore sinusoidale, inviluppo, sintesi additiva, AM/RM, save&store, recorder.
-                          </h5>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">Mobirise is perfect for non-techies who
+                              are not familiar with
+                              the intricacies of web development.</h5>
                       </div>
                   </div>
               </div>
