--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -164,7 +164,10 @@
                               <strong>Introduzione</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-
+                            <ul>
+                              <li>Campionamento</li>
+                                <li>Acusmatico</li>
+                              </ul>
                           </h5>
                       </div>
                   </div>
@@ -177,7 +180,10 @@
                               <strong>Dalla Musica Concreta alla Computer Music</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            Campionamento, .
+                            <ul>
+                              <li>Campionamento</li>
+                                <li>Acusmatico</li>
+                              </ul>
                           </h5>
                       </div>
                   </div>
@@ -192,7 +198,7 @@
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
                               <li>Storyboard</li>
-                                <li>spettrogramma</li>
+                                <li>Spettrogramma</li>
                               </ul>
                           </h5>
                       </div>
@@ -206,7 +212,13 @@
                               <strong>Sintesi Sonora</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            Oscillatore sinusoidale, inviluppo, sintesi additiva, AM/RM, save&store, recorder.
+                            <ul>
+                              <li>Oscillatore sinusoidale</li>
+                                <li>Inviluppo</li>
+                                <li>Sintesi additiva</li>
+                                <li>AM/RM</li>
+                                <li>Save&store</li>
+                                <li>Recorder</li>
                           </h5>
                       </div>
                   </div>
