--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -181,7 +181,7 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
-                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#title" title="content5-1d"></a>Concretismo</li>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#content5-1d" title="content5-1d"></a>Concretismo</li>
                                 <li>Acusmatico</li>
                               </ul>
                           </h5>
