--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -182,7 +182,7 @@
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#content5-1d" title="content5-1d">Concretismo</a></li>
-                                <li>Acusmatico</li>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#acusmatico" title="acusmatico">Acusmatico</a></li>
                               </ul>
                           </h5>
                       </div>
