--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -183,6 +183,7 @@
                             <ul>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#content5-1d" title="content5-1d">Concretismo</a></li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#acusmatico" title="acusmatico">Acusmatico</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html#content5-1d" title="content5-1d">Oggetto Sonoro</a></li>
                               </ul>
                           </h5>
                       </div>
