--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -245,7 +245,9 @@
                   <strong>Musica Concreta:</strong> è per Schaeffer una musica astratta veicolata da linguaggi e grafie, convenzioni puramente astratte, intellegibili, ma di cui non è mediata la rappresentazione, ma è presa dalla realtà, non vi è partitura, ed il tutto è concreto poiché non ha mediazioni di tipo simbolico. In seguito il termine musica concreta diviene aggettivo di una musica realizzata con suoni “trovati”, suoni reali, questa tipologia di musica non è soggetta ad astrazione come la musica tradizionale, poiché diviene un discorso puramente sonoro.
                   <br>
                   <br>
+                </p>
                   <div id="acusmatico"></div>
+                  <p class="mbr-text mbr-fonts-style display-7">
                   <strong>Musica Acusmatica:</strong> oggi per acusmatico viene definito un concerto in la musica viene riprodotta solamente attraverso altoparlanti, mentre in realtà il termine starebbe ad indicare, un ascolto di cui non riconosco la fonte di creazione del suono, dunque concentro l’attenzione sul suono stesso. Il suono fa dunque associare idee. Oggi intendiamo la musica acusmatica, come quella che riproduciamo attraverso altoparlanti. Se di un brano intendiamo la modalità con cui sono stati prodotti i suoni, permea il significato mimetico che viene trasportato all'ascoltatore.
                   <br>
                   <br>
