--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -185,6 +185,7 @@
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#acusmatico" title="acusmatico">Acusmatico</a></li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html#content5-1d" title="content5-1d">Oggetto Sonoro</a></li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html#content4-1b" title="content4-1b">Evoluzione del Pensiero Elettroacustico</a></li>
+                              <li><a href="https://www.youtube.com/watch?v=RYsEGZssHf8">Audio/Video</a></li>
                               </ul>
                           </h5>
                       </div>
