--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -186,6 +186,7 @@
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html#content5-1d" title="content5-1d">Oggetto Sonoro</a></li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html#content4-1b" title="content4-1b">Evoluzione del Pensiero Elettroacustico</a></li>
                               <li><a href="https://www.youtube.com/watch?v=RYsEGZssHf8">Audio/Video</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html#content5-1d" title="content5-1d">Musica Digitale</a></li>
                               </ul>
                           </h5>
                       </div>
@@ -200,8 +201,10 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
-                              <li>Storyboard</li>
-                                <li>Spettrogramma</li> Caratteristiche del suono
+                              <li>Caratteristiche del suono</li>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/leggi_della_gestalt.html">Leggi della Gestalt</a></li>
+                              <li>Spettrogramma - <a href="https://www.youtube.com/watch?v=MfxmMjlU1wE">Ascolto</a></li>
+                              <li>Grafizzazione</li>
                               </ul>
                           </h5>
                       </div>
@@ -218,6 +221,7 @@
                             <ul>
                               <li>Oscillatore sinusoidale</li>
                                 <li>Inviluppo</li>
+                                <li>Glissando</li>
                                 <li>Sintesi additiva</li>
                                 <li>AM/RM</li>
                                 <li>Save&store</li>
