--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -170,6 +170,7 @@
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html#acusmatico" title="acusmatico">Acusmatico</a></li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html#content5-1d" title="content5-1d">Oggetto Sonoro</a></li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/evoluzione_del_pensiero_elettroacustico.html#content4-1b" title="content4-1b">Evoluzione del Pensiero Elettroacustico</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/mimetico_aurale.html">Mimetico - Aurale</a></li>
                               <li><a href="https://www.youtube.com/watch?v=RYsEGZssHf8">Audio/Video</a></li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/musica_digitale_prima_parte.html#content5-1d" title="content5-1d">Musica Digitale</a></li>
                               </ul>
@@ -189,7 +190,7 @@
                               <li>Caratteristiche del suono</li>
                               <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/leggi_della_gestalt.html">Leggi della Gestalt</a></li>
                               <li>Spettrogramma - <a href="https://www.youtube.com/watch?v=MfxmMjlU1wE">Ascolto</a></li>
-                              <li>Grafizzazione</li>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html#grafizzazione" title="grafizzazione">Grafizzazione</a></li>
                               </ul>
                           </h5>
                       </div>
