--- a/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
+++ b/pages/learn/storia_elettroacustica/analisi_della_musica_etlettroacustica.html
@@ -110,7 +110,7 @@
 
 
     <!-- Title-->
-  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="grafizzazione">
       <div class="container">
           <div class="row justify-content-center">
               <div class="title col-md-12 col-lg-10">
