--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -204,7 +204,7 @@
                               <strong>Sintesi Sonora</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-                            <li><a href="https://www.gabrielavelitch.com/downloads/learn/patch_1.maxpat">MaxMSP - patch_1</a></li>
+                            <a href="https://www.gabrielavelitch.com/downloads/learn/patch_1.maxpat">MaxMSP - patch_1</a>
                             <ul>
                               <li>Oscillatore sinusoidale</li>
                               <li>Inviluppo</li>
